[tool.poetry]
name = "mars-rover"
version = "0.1.0"
description = ""
authors = ["Jorge Bodega Fernanz <jorge.bodega.f@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = { extras = ["dmypy"], version = "1.9.0" }
pytest = "8.1.1"
ruff = "0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
